# os-bakery

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Makefile  README.md  compose.prod.yaml  compose.yaml  conftest.py  manage.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml  refresh-images.yml
builds/: admin.py  apps.py  download_urls.py  models.py  orchestrator.py  serializers.py  signals.py  tasks.py  test_provisioners.py  tests.py  urls.py  views.py  workflow.py
builds/migrations/: 0001_initial.py  0002_buildrequest_cluster_buildrequest_tenant.py  0003_buildrequest_effective_model.py  0004_buildrequest_node.py
builds/provisioners/: __init__.py  batocera_pkg.py  cloud_init.py  haos_pkg.py  local_salt.py  packer_arm_tools.py  proxmox_autoinstall.py
catalog/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0005_provisioner.py  (+11 more)
docs/: README.md  api.md  architecture.md  catalog.md  ci.md  contributing.md  data-model.md  deployment.md  flashing.md  operations.md  orm.dot  os-matrix.md  overview.md  packer.md  platforms.md  roadmap.md  salt-states.md  salt.md  virtual-roms.md  workflow.md
infra/: admin.py  apps.py  models.py
osbakery/: asgi.py  celery.py  fields.py  settings.py  urls.py  views.py  wsgi.py
packer/: README.md
recipes/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
salt/: README.md
scripts/: _queue_test_matrix.py  bake-node.sh  deploy-prod.sh  vendor-batocera-packages.sh  vendor-salt-states.sh
tenants/: admin.py  models.py  pillar.py  tests.py  wireguard.py  zerotier.py
(+97 files in other folders)
