[project]
name = "os-bakery"
version = "0.1.0"
description = "Build and distribute customized OS images (Batocera, Raspberry Pi OS, Ubuntu, ...) for ARM and x86 targets, baked with Packer and tailored with Salt."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Aleš Komárek" },
]
license = { text = "MIT" }

dependencies = [
    "django>=5.1,<6.0",
    "django-environ>=0.11",
    "django-extensions>=3.2",
    "django-storages[s3]>=1.14",
    "djangorestframework>=3.15",
    "django-filter>=24.3",
    "celery>=5.4",
    "redis>=5.0",
    "psycopg[binary]>=3.2",
    "pyyaml>=6.0",
    "requests>=2.32",
    "humanize>=4.10",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "model-bakery>=1.19",
    "ipython>=8.27",
    "django-debug-toolbar>=4.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Conservative set for the scaffold — tighten once formatting + bandit/django
# rule violations have been triaged.
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "osbakery.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
# --no-migrations: build the test DB straight from models so first-time
# runs (no migrations on disk yet) still work in CI.
addopts = "-ra -q --no-migrations"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osbakery", "catalog", "recipes", "builds", "infra"]
